--- a/frontend/allpack/venues/venues.html
+++ b/frontend/allpack/venues/venues.html
@@ -338,6 +338,42 @@
                         </div>
                     </div>
                 </div>
+                 <!-- Slide 6 -->
+                 <div class="swiper-slide">
+                    <div class="card">
+                        <a href="/frontend/allpack/venues/venuesdata/c7.jpg">
+                            <img src="/frontend/allpack/venues/venuesdata/c7.jpg" alt="Wedding Decor 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">Elegant Floral Arrangements</h5>
+                            <p class="card-text">Beautiful floral designs for your special day.</p>
+                        </div>
+                    </div>
+                </div>
+                 <!-- Slide 6 -->
+                 <div class="swiper-slide">
+                    <div class="card">
+                        <a href="/frontend/allpack/venues/venuesdata/c8.jpg">
+                            <img src="/frontend/allpack/venues/venuesdata/c8.jpg" alt="Wedding Decor 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">Elegant Floral Arrangements</h5>
+                            <p class="card-text">Beautiful floral designs for your special day.</p>
+                        </div>
+                    </div>
+                </div>
+                 <!-- Slide 6 -->
+                 <div class="swiper-slide">
+                    <div class="card">
+                        <a href="/frontend/allpack/venues/venuesdata/c9.jpg">
+                            <img src="/frontend/allpack/venues/venuesdata/c9.jpg" alt="Wedding Decor 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">Elegant Floral Arrangements</h5>
+                            <p class="card-text">Beautiful floral designs for your special day.</p>
+                        </div>
+                    </div>
+                </div>
                 <!-- Add more slides as needed -->
             </div>
             <!-- Swiper Pagination -->
