--- a/frontend/allpack/invitation/inve.html
+++ b/frontend/allpack/invitation/inve.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wedding Invitation</title>
+    <!-- Bootstrap CSS -->
     <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
         rel="stylesheet"
@@ -14,11 +16,11 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         rel="stylesheet"
     />
-    <!-- Custom Styles -->
+    <!-- AOS Animation Library -->
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="/frontend/css/navbar.css">
     <link rel="stylesheet" href="/frontend/css/footer.css">
-    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-    <title>Wedding Invitation</title>
+    <!-- Custom Styles -->
     <style>
         /* Hero Section Styling */
         .hero-section {
@@ -60,62 +62,75 @@
             margin-top: 20px;
         }
 
-        /* Custom Styles for Invitation Cards */
-        .invitation-section {
-            padding: 50px 0;
+        /* Gallery Section Styling */
+        .gallery-section {
+            padding: 80px 0;
             background: #f8f9fa;
         }
 
-        .invitation-card {
-            background: #fff;
+        .gallery-section h2 {
+            text-align: center;
+            margin-bottom: 50px;
+            font-size: 2.5rem;
+            font-weight: bold;
+            color: #333;
+        }
+
+        .gallery-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            padding: 0 20px;
+        }
+
+        .gallery-item {
+            position: relative;
+            overflow: hidden;
             border-radius: 15px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
-        .invitation-card:hover {
+        .gallery-item:hover {
             transform: translateY(-10px);
             box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
         }
 
-        .invitation-card img {
+        .gallery-item img {
             width: 100%;
             height: 200px;
             object-fit: cover;
+            cursor: pointer;
+            transition: transform 0.3s ease;
         }
 
-        .invitation-card .card-body {
-            padding: 20px;
+        .gallery-item img:hover {
+            transform: scale(1.1);
+        }
+
+        .gallery-item .caption {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 10px;
             text-align: center;
+            font-size: 0.9rem;
+            opacity: 0;
+            transition: opacity 0.3s ease;
         }
 
-        .invitation-card .card-title {
-            font-family: 'Great Vibes', cursive;
-            font-size: 2.5rem;
-            color: #d4af37;
-            margin-bottom: 10px;
+        .gallery-item:hover .caption {
+            opacity: 1;
         }
 
-        .invitation-card .card-text {
-            font-size: 1rem;
-            color: #555;
-            margin-bottom: 15px;
-        }
-
-        .invitation-card .btn {
-            background: #d4af37;
-            border: none;
-            color: #fff;
-            padding: 10px 20px;
-            border-radius: 25px;
-            text-transform: uppercase;
-            font-weight: bold;
-            transition: background 0.3s ease;
-        }
-
-        .invitation-card .btn:hover {
-            background: #b5942e;
+        /* Modal styling */
+        .modal-img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
         }
     </style>
 </head>
@@ -175,46 +190,58 @@
         </div>
     </section>
 
-    <!-- Invitation Cards Section -->
-    <section class="invitation-section">
+    <!-- Gallery Section -->
+    <section class="gallery-section">
         <div class="container">
-            <div class="row">
-                <!-- Invitation Card 1 -->
-                <div class="col-md-4 mb-4" data-aos="fade-up">
-                    <div class="invitation-card">
-                        <img src="/frontend/allpack/invitation/invdar/1.jpg" class="card-img-top" alt="Invitation 1">
-                        <div class="card-body">
-                            <h5 class="card-title">Elegant Design</h5>
-                            <p class="card-text">A beautifully crafted invitation card for your special day. Perfect for weddings and formal events.</p>
-                            <a href="#" class="btn">View Details</a>
-                        </div>
-                    </div>
+            <h2>Invitation Gallery</h2>
+            <div class="gallery-grid">
+                <!-- Gallery Item 1 -->
+                <div class="gallery-item">
+                    <img src="/frontend/allpack/invitation/invdar/1.jpg" alt="Elegant Design" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/1.jpg')">
+                    <div class="caption">Elegant Design - Perfect for Weddings</div>
                 </div>
-                <!-- Invitation Card 2 -->
-                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="100">
-                    <div class="invitation-card">
-                        <img src="/frontend/allpack/invitation/invdar/2.jpg" class="card-img-top" alt="Invitation 2">
-                        <div class="card-body">
-                            <h5 class="card-title">Modern Style</h5>
-                            <p class="card-text">A contemporary design that blends elegance with modern aesthetics. Ideal for trendy weddings.</p>
-                            <a href="#" class="btn">View Details</a>
-                        </div>
-                    </div>
+                <!-- Gallery Item 2 -->
+                <div class="gallery-item">
+                    <img src="/frontend/allpack/invitation/invdar/2.jpg" alt="Modern Style" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/2.jpg')">
+                    <div class="caption">Modern Style - Trendy and Chic</div>
                 </div>
-                <!-- Invitation Card 3 -->
-                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
-                    <div class="invitation-card">
-                        <img src="/frontend/allpack/invitation/invdar/3.jpg" class="card-img-top" alt="Invitation 3">
-                        <div class="card-body">
-                            <h5 class="card-title">Classic Theme</h5>
-                            <p class="card-text">A timeless design that exudes sophistication and grace. Perfect for traditional weddings.</p>
-                            <a href="#" class="btn">View Details</a>
-                        </div>
-                    </div>
+                <!-- Gallery Item 3 -->
+                <div class="gallery-item">
+                    <img src="/frontend/allpack/invitation/invdar/3.jpg" alt="Classic Theme" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/3.jpg')">
+                    <div class="caption">Classic Theme - Timeless Elegance</div>
+                </div>
+                <!-- Gallery Item 4 -->
+                <div class="gallery-item">
+                    <img src="/frontend/allpack/invitation/invdar/4.jpg" alt="Luxury Design" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/4.jpg')">
+                    <div class="caption">Luxury Design - Opulent and Grand</div>
+                </div>
+                <!-- Gallery Item 5 -->
+                <div class="gallery-item">
+                    <img src="/frontend/allpack/invitation/invdar/5.jpg" alt="Minimalist Style" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/5.jpg')">
+                    <div class="caption">Minimalist Style - Simple and Clean</div>
+                </div>
+                <!-- Gallery Item 6 -->
+                <div class="gallery-item">
+                    <img src="/frontend/allpack/invitation/invdar/6.jpg" alt="Vintage Theme" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/6.jpg')">
+                    <div class="caption">Vintage Theme - Nostalgic Charm</div>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- Modal for Image -->
+    <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <img id="modalImage" class="d-block w-100 modal-img" src="" alt="Modal Image">
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Footer -->
     <footer class="bg-dark text-light py-4 footer-animated">
@@ -263,6 +290,12 @@
         crossorigin="anonymous"
     ></script>
     <script>
+        // Function to open modal with clicked image
+        function openModal(imageSrc) {
+            document.getElementById("modalImage").src = imageSrc;
+        }
+
+        // Initialize AOS
         AOS.init();
     </script>
 </body>
