--- a/frontend/allpack/mc/mc.html
+++ b/frontend/allpack/mc/mc.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Professional Master of Ceremony services for weddings and events. Book now for an unforgettable experience.">
     <meta name="keywords" content="wedding MC, event host, wedding planner, professional MC">
     <meta name="author" content="Wedding Planner">
+    <link rel="stylesheet" href="/frontend/css/navbar.css">
+    <link rel="stylesheet" href="/frontend/css/footer.css">
     <title>Master of Ceremony - Wedding Planner</title>
     <!-- Bootstrap CSS -->
     <link
@@ -326,6 +328,12 @@
                             <div class="carousel-item">
                                 <img src="/frontend/allpack/mc/mcdata/mc.jpg" class="d-block w-100" alt="MC Image 3">
                             </div>
+                            <div class="carousel-item">
+                                <img src="/frontend/allpack/mc/mcdata/inganzo.jpg" class="d-block w-100" alt="MC Image 4">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/frontend/allpack/mc/mcdata/Webp.net-resizeimage(10).jpg" class="d-block w-100" alt="MC Image 5">
+                            </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#mcCarousel" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -346,7 +354,7 @@
                         <li><i class="fas fa-check-circle text-success"></i> Multilingual capabilities</li>
                         <li><i class="fas fa-check-circle text-success"></i> Professional audio equipment provided</li>
                     </ul>
-                    <a href="booking.html" class="btn btn-primary btn-lg">Book Now</a>
+                   
                 </div>
             </div>
         </div>
@@ -385,13 +393,22 @@
             <h2 class="text-center mb-5" data-aos="fade-up">Gallery</h2>
             <div class="row">
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="100">
-                    <img src="/frontend/allpack/mc/mcdata/ran1.jpg" class="img-fluid rounded" alt="MC Image 1">
+                    <img src="/frontend/allpack/mc/mcdata/ranf.webp" class="img-fluid rounded" alt="MC Image 1">
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
-                    <img src="/frontend/allpack/mc/mcdata/Webp.net-resizeimage(14).jpg" class="img-fluid rounded" alt="MC Image 2">
+                    <img src="/frontend/allpack/mc/mcdata/mc1.jpg" class="img-fluid rounded" alt="MC Image 2">
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
-                    <img src="/frontend/allpack/mc/mcdata/mc.jpg" class="img-fluid rounded" alt="MC Image 3">
+                    <img src="/frontend/allpack/mc/mcdata/muvunyi.jpg" class="img-fluid rounded" alt="MC Image 3">
+                </div>
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
+                    <img src="/frontend/allpack/mc/mcdata/eric.jpeg" class="img-fluid rounded" alt="MC Image 3">
+                </div>
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
+                    <img src="/frontend/allpack/mc/mcdata/igihame2.jpeg" class="img-fluid rounded" alt="MC Image 3">
+                </div>
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
+                    <img src="/frontend/allpack/mc/mcdata/kamanzi.jpg" class="img-fluid rounded" alt="MC Image 3">
                 </div>
             </div>
         </div>
@@ -423,15 +440,13 @@
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
                         <div class="accordion-body">
-                            Yes, our MC is fluent in English, Spanish, and French.
+                            Yes, our MC is Kinyarwanda, fluent in English, and French.
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-
     <!-- Footer -->
     <footer class="bg-dark text-light py-4 footer-animated">
         <div class="container">
