--- a/test2.html
+++ b/test2.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="/frontend/css/navbar.css">
     <link rel="stylesheet" href="/frontend/css/footer.css">
     <style>
+        
         /* Custom Styles for MC Page */
         .mc-hero {
             background: url('/frontend/allpack/mc/mcdata/background.jpg') no-repeat center center/cover;
@@ -33,6 +34,16 @@
             justify-content: center;
             color: white;
             text-align: center;
+            
+        }
+        .hero-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8));
+            z-index: 1;
         }
         .mc-hero h1 {
             font-size: 4rem;
@@ -124,7 +135,8 @@
 
     <!-- MC Hero Section -->
     <section class="mc-hero" data-aos="fade-down">
-        <h1>Master of Ceremony</h1>
+        <div class="hero-overlay"></div>
+        <h1 class="display-3 fw-bold">Master of Ceremony</h1>
         <p class="lead">Make your wedding unforgettable with our professional MC services.</p>
         <a href="booking.html" class="btn btn-primary btn-lg mt-3">Book Now</a>
     </section>
