--- a/frontend/allpack/sound/sound.html
+++ b/frontend/allpack/sound/sound.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Professional sound and lighting services for weddings and events. Elevate your event with our state-of-the-art equipment and expert technicians.">
-    <meta name="keywords" content="wedding sound, event lighting, sound systems, lighting design, professional event services">
+    <meta name="description" content="Professional wedding planning services to make your special day unforgettable. From sound and lighting to full event coordination, we handle every detail.">
+    <meta name="keywords" content="wedding planner, wedding sound, event lighting, wedding coordination, professional wedding services">
     <meta name="author" content="Wedding Planner">
-    <title>Sound & Lighting Services - Wedding Planner</title>
+    <title>Wedding Planning Services - Wedding Planner</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <!-- Font Awesome for icons -->
@@ -145,7 +145,7 @@
         .carousel-control-next {
             width: 50px;
             height: 50px;
-            background-color: rgb(253, 0, 0);
+            background-color: rgb(168, 23, 23);
             border-radius: 50%;
             top: 50%;
             transform: translateY(-50%);
@@ -177,6 +177,38 @@
         .card-slider {
             margin: 20px 0; /* Add margin to the slider container */
         }
+
+        /* Testimonials Section */
+        .testimonials {
+            background-color: #f8f9fa;
+            padding: 50px 0;
+        }
+        .dark-mode .testimonials {
+            background-color: #1a1a1a; /* Dark background for testimonials in dark mode */
+        }
+        .testimonial-card {
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .dark-mode .testimonial-card {
+            background-color: #2c3e50; /* Dark background for cards in dark mode */
+            color: #f0f0f0; /* Light text for dark mode */
+        }
+        .testimonial-card h5 {
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+        .testimonial-card p {
+            color: #7f8c8d;
+            font-style: italic;
+        }
+        .dark-mode .testimonial-card p {
+            color: #bdc3c7; /* Lighter text color for dark mode */
+        }
     </style>
 </head>
 <body>
@@ -207,15 +239,15 @@
 
     <!-- Parallax Section -->
     <div class="parallax" data-aos="fade-up">
-        <h1 class="display-4">Transform Your Event</h1>
+        <h1 class="display-4">Transform Your Wedding</h1>
     </div>
 
-    <!-- Sound & Lighting Section -->
+    <!-- Wedding Planning Services Section -->
     <section class="container my-5">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h1 class="display-5" data-aos="fade-up">Sound & Lighting Services</h1>
-                <p class="lead" data-aos="fade-up" data-aos-delay="100">Transform your event with our professional sound and lighting solutions.</p>
+                <h1 class="display-5" data-aos="fade-up">Wedding Planning Services</h1>
+                <p class="lead" data-aos="fade-up" data-aos-delay="100">Make your special day unforgettable with our professional wedding planning services.</p>
             </div>
         </div>
 
@@ -226,7 +258,7 @@
             </div>
             <div class="col-md-6" data-aos="fade-left" data-aos-delay="100">
                 <h2>Sound Systems</h2>
-                <p>Our state-of-the-art sound systems ensure crystal-clear audio for every moment of your event. Whether it's a wedding ceremony, reception, or corporate event, we provide tailored solutions to meet your needs.</p>
+                <p>Our state-of-the-art sound systems ensure crystal-clear audio for every moment of your wedding. From the ceremony to the reception, we provide tailored solutions to meet your needs.</p>
                 <ul class="list-unstyled">
                     <li><i class="fas fa-check-circle text-primary"></i> High-quality speakers and microphones</li>
                     <li><i class="fas fa-check-circle text-primary"></i> Wireless and wired setups</li>
@@ -242,7 +274,7 @@
             </div>
             <div class="col-md-6 order-md-1" data-aos="fade-right" data-aos-delay="100">
                 <h2>Lighting Design</h2>
-                <p>Create the perfect ambiance with our professional lighting services. From elegant uplighting to dynamic stage lighting, we bring your vision to life.</p>
+                <p>Create the perfect ambiance for your wedding with our professional lighting services. From elegant uplighting to dynamic stage lighting, we bring your vision to life.</p>
                 <ul class="list-unstyled">
                     <li><i class="fas fa-check-circle text-primary"></i> Custom lighting designs</li>
                     <li><i class="fas fa-check-circle text-primary"></i> LED and intelligent lighting</li>
@@ -255,7 +287,7 @@
         <div class="row mt-5">
             <div class="col-md-12 text-center">
                 <h2 data-aos="fade-up">Our Work in Action</h2>
-                <p class="lead" data-aos="fade-up" data-aos-delay="100">Check out some of our recent projects.</p>
+                <p class="lead" data-aos="fade-up" data-aos-delay="100">Check out some of our recent wedding projects.</p>
             </div>
             <div class="col-md-12 card-slider" data-aos="fade-up">
                 <div id="cardCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -287,8 +319,8 @@
                                         <img src="/frontend/allpack/sound/sounddata/sound5.jpg" class="card-img-top" alt="Gallery Image 3">
                                     </a>
                                     <div class="card-body">
-                                        <h5 class="card-title">Corporate Event Setup</h5>
-                                        <p class="card-text">Professional sound and lighting for corporate events.</p>
+                                        <h5 class="card-title">Wedding Reception Setup</h5>
+                                        <p class="card-text">Professional sound and lighting for wedding receptions.</p>
                                     </div>
                                 </div>
                             </div>
@@ -301,8 +333,8 @@
                                         <img src="/frontend/allpack/sound/sounddata/sound6.jpg" class="card-img-top" alt="Gallery Image 4">
                                     </a>
                                     <div class="card-body">
-                                        <h5 class="card-title">Outdoor Event Setup</h5>
-                                        <p class="card-text">Perfect sound and lighting for outdoor events.</p>
+                                        <h5 class="card-title">Outdoor Wedding Setup</h5>
+                                        <p class="card-text">Perfect sound and lighting for outdoor weddings.</p>
                                     </div>
                                 </div>
                                 <div class="card custom-card">
@@ -310,8 +342,8 @@
                                         <img src="/frontend/allpack/sound/sounddata/sound7.jpg" class="card-img-top" alt="Gallery Image 5">
                                     </a>
                                     <div class="card-body">
-                                        <h5 class="card-title">Stage Lighting</h5>
-                                        <p class="card-text">Dynamic lighting for stage performances.</p>
+                                        <h5 class="card-title">Wedding Stage Lighting</h5>
+                                        <p class="card-text">Dynamic lighting for wedding stages.</p>
                                     </div>
                                 </div>
                                 <div class="card custom-card">
@@ -319,40 +351,8 @@
                                         <img src="/frontend/allpack/sound/sounddata/sound8.jpg" class="card-img-top" alt="Gallery Image 6">
                                     </a>
                                     <div class="card-body">
-                                        <h5 class="card-title">Concert Setup</h5>
-                                        <p class="card-text">Professional sound and lighting for concerts.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Third Slide -->
-                        <div class="carousel-item">
-                            <div class="d-flex justify-content-center">
-                                <div class="card custom-card">
-                                    <a href="/frontend/allpack/sound/sounddata/sound9.jpg">
-                                        <img src="/frontend/allpack/sound/sounddata/sound9.jpg" class="card-img-top" alt="Gallery Image 7">
-                                    </a>
-                                    <div class="card-body">
-                                        <h5 class="card-title">Concert Setup</h5>
-                                        <p class="card-text">Professional sound and lighting for concerts.</p>
-                                    </div>
-                                </div>
-                                <div class="card custom-card">
-                                    <a href="/frontend/allpack/sound/sounddata/sound10.jpg">
-                                        <img src="/frontend/allpack/sound/sounddata/sound10.jpg" class="card-img-top" alt="Gallery Image 8">
-                                    </a>
-                                    <div class="card-body">
-                                        <h5 class="card-title">Concert Setup</h5>
-                                        <p class="card-text">Professional sound and lighting for concerts.</p>
-                                    </div>
-                                </div>
-                                <div class="card custom-card">
-                                    <a href="/frontend/allpack/sound/sounddata/sound10.jpg">
-                                        <img src="/frontend/allpack/sound/sounddata/sound10.jpg" class="card-img-top" alt="Gallery Image 8">
-                                    </a>
-                                    <div class="card-body">
-                                        <h5 class="card-title">Concert Setup</h5>
-                                        <p class="card-text">Professional sound and lighting for concerts.</p>
+                                        <h5 class="card-title">Wedding Ceremony Setup</h5>
+                                        <p class="card-text">Professional sound and lighting for wedding ceremonies.</p>
                                     </div>
                                 </div>
                             </div>
@@ -375,59 +375,100 @@
         <div class="row mt-5">
             <div class="col-md-12 text-center" data-aos="fade-up">
                 <h2>Why Choose Us?</h2>
-                <p>We combine cutting-edge technology with expert craftsmanship to deliver unforgettable experiences. Our team is dedicated to making your event seamless and spectacular.</p>
+                <p>We combine cutting-edge technology with expert craftsmanship to deliver unforgettable wedding experiences. Our team is dedicated to making your wedding seamless and spectacular.</p>
                 <a href="booking.html" class="btn btn-primary btn-lg">Book Now</a>
             </div>
         </div>
-    </section>
-<!-- Footer -->
-<footer class="bg-dark text-light py-4 footer-animated">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <h5>About Us</h5>
-                <p class="footer-content">We are a dedicated team of event planners, committed to creating unforgettable experiences. From weddings to corporate events, we handle every detail with care and expertise.</p>
-            </div>
-            <div class="col-md-4">
-                <h5>Quick Links</h5>
-                <ul class="list-unstyled footer-content">
-                    <li><a href="home.htm" class="text-light">Home</a></li>
-                    <li><a href="#" class="text-light">About</a></li>
-                    <li><a href="#" class="text-light">Services</a></li>
-                    <li><a href="index.html" class="text-light">Packages</a></li>
-                    <li><a href="#" class="text-light">Contact</a></li>
-                </ul>
-            </div>
-            <div class="col-md-4">
-                <h5>Connect With Us</h5>
-                <ul class="list-unstyled footer-content">
-                    <li><a href="#" class="text-light"><i class="fab fa-facebook-f"></i> Facebook</a></li>
-                    <li><a href="#" class="text-light"><i class="fab fa-twitter"></i> Twitter</a></li>
-                    <li><a href="#" class="text-light"><i class="fab fa-instagram"></i> Instagram</a></li>
-                    <li><a href="#" class="text-light"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="text-center mt-4">
-            <p class="footer-content">&copy; 2025 Wedding Planner. All Rights Reserved.</p>
-        </div>
-    </div>
-</footer>
 
-<!-- Scripts -->
-<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-<script
-    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-    crossorigin="anonymous"
-></script>
-<script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-    crossorigin="anonymous"
-></script>
-<script>
-    AOS.init();
-</script>
+        <!-- Testimonials Section -->
+        <div class="testimonials mt-5">
+            <div class="container">
+                <h2 class="text-center mb-5">What Our Clients Say</h2>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="testimonial-card">
+                            <h5>Sarah & John</h5>
+                            <p>"Our wedding was absolutely magical, thanks to the Wedding Planner team. The sound and lighting were perfect, and everything ran so smoothly. We couldn't have asked for a better experience!"</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="testimonial-card">
+                            <h5>Emily & Michael</h5>
+                            <p>"The Wedding Planner team made our dream wedding come true. The lighting design was stunning, and the sound system was flawless. Highly recommend their services!"</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="testimonial-card">
+                            <h5>Jessica & David</h5>
+                            <p>"From the ceremony to the reception, everything was perfect. The team was professional, attentive, and made sure every detail was taken care of. Thank you for making our day unforgettable!"</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-light py-4 footer-animated">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h5>About Us</h5>
+                    <p class="footer-content">We are a dedicated team of wedding planners, committed to creating unforgettable experiences. From ceremonies to receptions, we handle every detail with care and expertise.</p>
+                </div>
+                <div class="col-md-4">
+                    <h5>Quick Links</h5>
+                    <ul class="list-unstyled footer-content">
+                        <li><a href="home.htm" class="text-light">Home</a></li>
+                        <li><a href="#" class="text-light">About</a></li>
+                        <li><a href="#" class="text-light">Services</a></li>
+                        <li><a href="index.html" class="text-light">Packages</a></li>
+                        <li><a href="#" class="text-light">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h5>Connect With Us</h5>
+                    <ul class="list-unstyled footer-content">
+                        <li><a href="#" class="text-light"><i class="fab fa-facebook-f"></i> Facebook</a></li>
+                        <li><a href="#" class="text-light"><i class="fab fa-twitter"></i> Twitter</a></li>
+                        <li><a href="#" class="text-light"><i class="fab fa-instagram"></i> Instagram</a></li>
+                        <li><a href="#" class="text-light"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="text-center mt-4">
+                <p class="footer-content">&copy; 2025 Wedding Planner. All Rights Reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"
+    ></script>
+    <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"
+    ></script>
+    <script>
+        AOS.init();
+
+        // Dark Mode Toggle Function
+        function toggleDarkMode() {
+            const body = document.body;
+            body.classList.toggle('dark-mode');
+
+            const darkModeToggle = document.querySelector('.dark-mode-toggle');
+            if (body.classList.contains('dark-mode')) {
+                darkModeToggle.innerHTML = '<i class="fas fa-sun"></i> Light Mode';
+            } else {
+                darkModeToggle.innerHTML = '<i class="fas fa-moon"></i> Dark Mode';
+            }
+        }
+    </script>
 </body>
 </html>
